# maidreamin-api-graphql

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  air.lua  benchmark.sh
code/: .dockerignore  Cargo.toml  README.md  benchmark.sh
code/src/: data.rs  main.rs  schema.rs
code/static/: index.html
src/: data.rs  main.rs  route.rs  schema.rs
static/: dreamin.json
