[package]
name = "dreamin-graphql"
version = "0.1.0"
authors = ["SaltyAom <aomkirby123@mystiar.com>"]
edition = "2018"

[dependencies]
actix-web = "3.2.0"
actix-cors = "0.5.3"
actix-files = "0.4.0"
serde = "1.0.117"
serde_json = "1.0.59"
juniper = { git = "https://github.com/graphql-rust/juniper.git" }
lazy_static = "1.4.0"